<resources>
    <string name="app_name">Paradiso</string>
    <string name="home">home</string>
    <string name="serach">search</string>
    <string name="profile">profile</string>
    <string name="follower">follower</string>
    <string name="log_in">Movies</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in_btn">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver">Map</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="title_activity_search_and_tabs">SearchAndTabs</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">People</string>
    <string name="title_activity_search_tabs">SearchTabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_group">Create a group</string>
    <string name="forgotten_password">I have forgotten the password</string>
    <string name="others">others</string>
    <string name="movies">movies</string>
</resources>