<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:id="@+id/constraintLayout">

    <VideoView
        android:id="@+id/video_neon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/enter_your_name"
        android:textColor="@color/colorAccent"
        android:textColorHint="#979193"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textColorHint="#979193"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_@.-"
        android:inputType="textFilter"
        android:layout_marginRight="40dp"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_@.-$"
        android:inputType="textFilter"
        android:textColorHint="#979193"
        android:hint="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUp_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/button_border_black"
        android:gravity="center"
        android:text="@string/sign_up_btn"
        app:layout_constraintBottom_toBottomOf="@+id/video_neon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/log_in_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="Log in"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignUp_btn1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/SignUp_btn1"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_btn1"
        app:layout_constraintVertical_bias="0.138" />


</androidx.constraintlayout.widget.ConstraintLayout>